Bug 1008455 - Avoid loading the xul.css UA style sheet when possible. r=bz CLOSED TREE